k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mutuelle
  labels:
    name: mutuelle
